
Current Development Version: WSPR-4.0

2014-06-20 commit r4191 Greg Beam <ki7mt@yahoo.com>

* correct file names in copyright hearders of a few files
* updated Makefile.in; change ln -s to mv -T for wspr.sh script
* Updated install / uninstall targets
* Bump wspr.py version to r4191, no other edits made to wspr.py


2014-06-05 commit r4171 Greg Beam <ki7mt@yahoo.com>

* Added copyright headers to .py .c and .py files (GNU GPL-3)
* Moved old f2py.py to ./archive/
* Moved wspr_nogui.txt to WsprNoGui/
* Moved old DFINC.MAK to ./archive/
* Updated AUTHORS
* Updated wspr.py with latest revision number after edits.
* Updated setup.py, although it's not being used much at the moment.
* Updated wspr_nogui.py revison number after edits
* Added copyright headers to all wspr_nogui.py files in WsprModNoGui/
* Removed tkrep.py fron wspr-manifest.in as its not needed for WSPR
* ran licensecheck dev script against all files.
* Added descriptions to some of the .f90 files, needs work still.
* Tested build from ./autogen.sh make && make install

NOTE: t1.f90 and wwv.f90 appear similar, neither seem to be used on Linux or
Windows in either Makefile.in or Makefile.jtsdk


2014-06-04 commit r4168 Greg Beam <ki7mt@yahoo.com>

* Updated wspr.1 manpage
* Updated wspr-dist.sh to reflect doc location changes
* Update Makefile.in make install target (updated directories)
* Update configure.ac to add /usr/lib/wspr
* Moved WSPR_4.0_User.docx to wpsr/archive as it's now in AsciiDoc format in SVN
* Moved WSPR_Announcement.txt to wspr/archive
* Moved WSPR_Quick_Start.TXT top ../archive
* Moved WSPR0_Instructions.TXT and User_Guide to ../archive
* Moved wspr_no_gui.txt to archive, needs adding to SVN AsciiDoc format if it's
  to be published formally.

TO-DO:
* Consolidate WSPR0_User_Guide and WSPR0_Instructions then add to SVN AsciiDoc
  Format. Should be sync'd with the published online document.
* Add Wspr_NoGui.py instructions somewhere ; seperate doc, in WSPR Guide?

