@@ -1,0 +1,10 @@
+Hamlib File for Windows
+
+Assumed from: 1.2.15.3
+Site URL: http://sourceforge.net/projects/hamlib/files/hamlib/1.2.15.3
+
+Needs to be verified / updated to latest if need be.
+
+
+
+
